fix: adjust post styles for better layout and readability

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -187,8 +187,12 @@ pre>code {
 blockquote {
 	background-color: #f7f7f7;
 	border-left: 4px solid #e4e4e7;
-	padding: 0 0 0 20px;
-	margin: 0px;
+	padding: 10px 0 10px 20px;
+	margin: 0px 0 1.2rem;
+}
+
+blockquote p {
+	margin: 0 !important;
 }
 
 .dark blockquote {
